--- a/block-BHaaax/index.html
+++ b/block-BHaaax/index.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF=8">
-        <title>Blog Page Exercise</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <header>
-            <div class="logo">BMW</div>
-                <nav>
-                    <a class="a" href="#">HOME</a>
-                    <a class="a" href="#">ABOUT</a>
-                    <a class="a" href="#">SERVICE</a>
-                    <a class="a" href="#">BLOG</a>
-                </nav>
-        </header>
-        <main>
-            <article class="article ">
-                <section class="section1">
-                    <h2 class="h2">Lorem Ipsum</h2>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                </section>
-                <section classs="section2">
-                    <img src="L975725-20170505133348.jpg">
-                </section>
-            </article>
-        </main>
-        <footer>
-           <p>footer</p>
-        </footer>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blog Page Exercise</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <div class="logo">BMW</div>
+           <nav>
+               <a class="a" href="#">HOME</a>
+               <a class="a" href="#">ABOUT</a>
+               <a class="a" href="#">SERVICE</a>
+               <a class="a" href="#">BLOG</a>
+            </nav>  
+    </header>
+    <main>
+        <div class="article">
+            <section class="section1">
+                <h2 class="h2">Lorem Ipsum</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            </section>
+            <section class="section2" >
+                <img src="L975725-20170505133348.jpg">
+            </section>
+        </div>
+    </main>
+    <footer>
+        <p>footer</p>
+    </footer>   
+</body>
 </html>
