--- a/block-BHaaax/index.html
+++ b/block-BHaaax/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="logo">BMW</div>
            <nav>
                <a class="a" href="#">HOME</a>
