--- a/block-BHaabd/index.html
+++ b/block-BHaabd/index.html
@@ -5,3 +5,39 @@
 
 - Using CSS resets is necessary.
 - Use semantic tags and keep the nesting and indentation proper. -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Our Cats</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+    <header class="header">Extracts from "Our Cats, by Harrison Weir"</header>
+    <div class="container-child clearfix">
+        <h2 class="h2">Usefulness of cats</h2>
+        <section class="section1">
+        <p>Introductory</p>
+        <p>The First Cat Show</p>
+        <p>Habits</p>
+        <p>Trained Cats</p>
+        <p>Usefulness of Cats</p>
+        </section>
+        <section class="section2">
+            <img src="069993775155156b0314acf945e75117.jpg">
+            <p>Integer vehicula egestas leo eu commodo. Etiam auctor ac metus ac egestas. Phasellus elementum quis nulla sed pulvinar. Donec malesuada convallis ullamcorper. Aliquam consequat, felis in convallis placerat, ante diam volutpat lacus, eget congue purus justo et lacus. Quisque dapibus ipsum a enim consequat iaculis. Morbi vel feugiat odio, volutpat mollis augue. Fusce sollicitudin et libero id aliquet.</p>
+            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur sed mollis diam. Nunc vulputate vitae diam eget pharetra. Quisque tincidunt turpis mauris, non malesuada lorem aliquam et. Suspendisse arcu mauris, efficitur nec lobortis in, lacinia et lacus. Curabitur eleifend volutpat vulputate. Proin aliquet dolor eget eleifend sodales. Cras ex metus, mollis at lacinia eu, convallis ut sem. Proin aliquam sed odio suscipit tristique.</p>
+            <p class="p">Fusce sollicitudin et libero id aliquet. Integer scelerisque lacinia rhoncus. Quisque euismod quis nulla ac bibendum. Morbi rutrum, tortor eu pharetra varius, justo tortor iaculis libero.</p>
+            <p>Ut consectetur, tortor mollis ullamcorper tincidunt, libero risus facilisis felis, in dignissim dui sapien quis neque. Proin dapibus dictum volutpat. Cras efficitur imperdiet consectetur. Cras a consequat dui. Pellentesque nisl urna, elementum dignissim volutpat et, imperdiet eget lectus. Etiam vitae neque eros. Aenean vel risus in sapien cursus consequat.</p>
+        </section>
+        <section class="section3">
+            <p>Let any one have a plague of rats and mice, as I once had' and let them be delivered therefrom by cats, as I was, and they will have a lasting and kind regard for them.</p>
+        </section>
+    </div>
+    </div>
+</body>
+
+</html>
