--- a/block-BHaabg/index.html
+++ b/block-BHaabg/index.html
@@ -13,3 +13,68 @@
 6. After the gallery section footer will come.
 
 7. Take a circular button at the right bottom corner of the page and keep its position fixed. The button should always take to the top of the page once clicked. -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gallery layout</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body id="top">
+    <header>
+       <div class="logo">BMW</div>
+       <nav>
+        <a class="a" href="#">HOME</a>
+        <a class="a" href="#">ABOUT</a>
+        <a class="a" href="#">SERVICE</a>
+        <a class="a" href="#">BLOG</a>
+       </nav>
+    </header>
+    <main>
+        <div class="container1 clearfix">
+         <section class="section-1">
+            <h2 class="h2">Lorem Ipsum</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam in nisi fermentum nisl eleifend pellentesque in quis lectus. Mauris id porta sapien. Vivamus sed massa vitae orci mollis tristique. Donec malesuada tellus eu purus venenatis venenatis. Cras scelerisque risus eu metus rutrum, id molestie arcu tincidunt. Nam sodales enim ut sollicitudin rutrum. Mauris scelerisque maximus nisl a tristique. Morbi elit dolor, fermentum quis ligula id, gravida aliquam ligula. Ut tempus nec orci id laoreet.</p>
+         </section>
+         <section class="section-2 ">
+            <img src="istockphoto-1090081372-170667a.jpg">
+         </section>
+        </div>
+        <section class="section3">
+        <div class="container2 clearfix">
+            <div class="column-1">
+              <img src="1657593631_2-papik-pro-p-beautiful-cute-cats-2.jpg" class="img-1">
+            </div>
+            <div class="column-2">
+              <img src="069993775155156b0314acf945e75117.jpg" class="img-1">
+            </div>
+            <div class="column-3">
+              <img src="20200501113755295logo-bmw_1176x840.jpg" class="img-1">
+            </div>
+        </div>
+        </section>
+        <section class="section4">
+            <div class="container3 clearfix">
+                <div class="column-4">
+                    <img src="istockphoto-458129961-612x612.jpg" class="img-1">
+                </div>
+                <div class="column-5">
+                    <img src="L975725-20170505133348.jpg" class="img-1">
+                </div>
+                <div class="column-6">
+                    <img src="pexels-stein-egil-liland-3408744.jpg" class="img-1">
+                </div>
+            </div>
+        </section>
+        <section class="section-5">
+        <a href="#top" class="btn">top button</a>
+        </section>
+    </main>
+       <footer>
+        <p>footer</p>
+       </footer>
+</body>
+</html>
