--- a/block-BHaabh/index.html
+++ b/block-BHaabh/index.html
@@ -5,3 +5,112 @@
 
 - Using CSS resets is necessary.
 - Use semantic tags and keep the nesting and indentation proper. -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Positioning Layout</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
+</head>
+<body>
+    <div class="container-1">
+  <header>
+     <h1 class="h1">Theory</h1>
+     <nav>
+     <a class="a" href="#">Home</a>
+     <a class="a" href="#">Generic</a>
+     <a class="a" href="#">Elements</a>
+     </nav>
+     <h2 class="h2">Welcome to Theory</h2>
+     <p class="p1">A free responsive HTML5 website template by TEMPLATED.</p>
+  </header> 
+    <main>
+        <div class="container-2 clearfix">
+            <section class="section-1">
+                <h3 class="h3">Magna tempus sed amet aliquam veroeros</h3>
+                <p class="text">Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcoroper laoreet. lectus arcu.</p>
+                <a class="more" href="#">More</a>
+            </section>
+            <section class="section-2">
+                <h3 class="h3">Interdum lorem pulvinar adipiscing vitae</h3>
+                <p class="text">Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcoroper laoreet. lectus arcu.</p>
+                <a class="more" href="#">More</a>
+            </section>
+            <section class="section-3">
+                <h3 class="h3">Libero purus magna sapien sed ullamcorper</h3>
+                <p class="text">Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcoroper laoreet. lectus arcu.</p>
+                <a class="more" href="#">More</a>
+            </section>
+        </div>
+        <div class="container-3">
+            <h3 class="p2">Ipsum Feugiat</h3>
+            <p class="p1">Semper suscipit posuere apede</p>
+            <div class="boxes clearfix">
+                <div class="box1">
+                <div class="img-1">
+                   <img src="pic03.jpg">
+                   <h3 class="h4">Magna</h3>
+                   <p class="p3">Cipdum dolor</p>
+                </div>
+                </div>
+                <div class="box2">
+                <div class="img-2">
+                   <img src="pic04.jpg">
+                   <h3 class="h4">Ipsum</h3>
+                   <p class="p3">Vestibulum comm</p>
+                </div>
+                </div>
+                <div class="box3">
+                <div class="img-3">
+                   <img src="pic05.jpg">
+                   <h3 class="h4">Tempus</h3>
+                   <p class="p3">Fusce pellentes</p>
+                </div>
+                </div>
+                <div class="box4">
+                <div class="img-4">
+                   <img src="pic06.jpg">
+                   <h3 class="h4">Dolore</h3>
+                   <p class="p3">Praesent placer</p>
+                </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-4 clearfix">
+            <h3 class="h5">Nunc Dignissim</h3>
+            <p class="p4">Aliquam erat volutpat nam dui</p>
+            <div class="img-5">
+            <img src="pic01.jpg" class="img2">
+            <h3 class="h6">Praesent placerat magna</h3>
+            <p class="p5">Present dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis. accumsan porttitor lorem ipsum.</p>
+            <a class="more" href="#">More</a>
+            </div>
+            <div class="img-6">
+            <img src="pic02.jpg" class="img2">
+            <h3 class="h6">Fusce pellenteseque tempus</h3>
+            <p class="p5">Sed adipiscing ornare risus. Morbi est, blandit sit amet, sagittis vel, euismod vel, velit. Pellentesque egestas sem. Suspendisse commodo ullamcorper magan non commodo sodales tempus.</p>
+            <a class="more" href="#">More</a>
+            </div>
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="conytainer-5 clearfix">
+          <hr>
+            <small class="small">
+                &COPY; Untitled. Design: TEMPLATED. Images: Unsplash.
+            </small>
+            <nav class="nav-2">
+              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+              <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
+              <a href="#"><i class="fa-brands fa-vimeo-v"></i></a>
+            </nav>
+        </div>
+    </footer>
+    </div>
+</body>
+</html>
